<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_cur_value_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Actual Value"
        android:text="17.000,56 EUR"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_cur_value_date" />

    <TextView
        android:id="@+id/tv_orig_value_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Inittial Value"
        android:text="14.001,45 EUR"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/tv_orig_value_date" />

    <TextView
        android:id="@+id/tv_last_sync_change_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-4,45 %"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_last_sync_change_val" />

    <TextView
        android:id="@+id/tv_last_sync_change_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-45,05 EUR"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_last_sync_change_string" />

    <TextView
        android:id="@+id/tv_last_sync_change_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_change_since_last_sync"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/guideline6" />

    <TextView
        android:id="@+id/tv_absolut_change_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_change_since_buy"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/guideline6" />

    <TextView
        android:id="@+id/tv_cur_value_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_current_sell_value"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/guideline5" />

    <TextView
        android:id="@+id/tv_orig_value_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_current_buy_value"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toTopOf="@id/guideline5" />

    <TextView
        android:id="@+id/tv_cur_value_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="29.09.2019 18:45:44"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_cur_value_string" />

    <TextView
        android:id="@+id/tv_orig_value_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="01.01.2016"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/tv_orig_value_string" />

    <TextView
        android:id="@+id/tv_absolut_change_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3.000,45 EUR"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/tv_absolut_change_string" />

    <TextView
        android:id="@+id/tv_absolut_change_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+14,45 %"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline4"
        app:layout_constraintTop_toBottomOf="@id/tv_absolut_change_val" />

    <TextView
        android:id="@+id/tv_dashboard_portfolio_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dashboard_portfolio_items"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/guideline7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="120dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="220dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/tv_dashboard_portfolio_items"
        tools:listitem="@layout/recycler_view_item" />
</androidx.constraintlayout.widget.ConstraintLayout>